--- a/styles/dn.css
+++ b/styles/dn.css
@@ -25,4 +25,11 @@
 }
 .pmain_block2_forimg {
   display: none;
+}
+
+.pfooter_block1_logo {
+  display: none;
+}
+.pfooter_block1_text {
+  display: none;
 }/*# sourceMappingURL=dn.css.map */
