--- a/styles/pmedia.css
+++ b/styles/pmedia.css
@@ -194,5 +194,6 @@
     font-weight: 400;
     line-height: normal;
     margin-top: 14px;
+    display: block;
   }
 }/*# sourceMappingURL=pmedia.css.map */
