--- a/styles/dn.scss
+++ b/styles/dn.scss
@@ -35,3 +35,13 @@
         }
     }
 }
+.pfooter {
+    &_block1 {
+        &_logo {
+            display: none;
+        }
+        &_text {
+            display: none;
+        }
+    }
+}
