--- a/styles/pmedia.scss
+++ b/styles/pmedia.scss
@@ -196,6 +196,7 @@
                 font-weight: 400;
                 line-height: normal;
                 margin-top: 14px;
+                display: block;
             }     
         }
     }
